[metadata]
name = pb
summary = pb is a lightweight pastebin (and url shortener) built using flask
description-file =
    README.rst
maintainer='Zack Buhman',
maintainer_email='zack@buhman.org',
home-page = https://github.com/ptpb/pb
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pb

data-files =
    pb/templates = pb/templates/*

[entry_points]
console_scripts =
    pb-delete = pb.tools.delete:main
